--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img id="descr" src="images/description-1.png" alt="An introductory guide to the high-speed motorsport" width="300px">
     </div>  
     <!-- Image sourced from https://www.clipartmax.com/middle/m2K9A0m2G6m2Z5N4_free-vector-formula-one-car-clip-art-formula-1-clipart/ -->
-    <img src="images/red-front.png" alt="Red Formula 1 car" width="800px">
+    <img src="images/final-car.png" alt="Red Formula 1 car" width="800px">
 
   </div>
   
