--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </div>  
     <!-- Image sourced from https://www.clipartmax.com/middle/m2K9A0m2G6m2Z5N4_free-vector-formula-one-car-clip-art-formula-1-clipart/ -->
     <img src="images/final-car.png" alt="Red Formula 1 car" width="800px">
-
+  </div>
+  <div class="scroll-bounce">
+    <p>SCROLL TO CONTINUE</p>
   </div>
   
   <div id="map">
