--- a/index.html
+++ b/index.html
@@ -20,10 +20,32 @@
       <img id="descr" src="images/description-1.png" alt="An introductory guide to the high-speed motorsport" width="300px">
     </div>  
     <!-- Image sourced from https://www.clipartmax.com/middle/m2K9A0m2G6m2Z5N4_free-vector-formula-one-car-clip-art-formula-1-clipart/ -->
-    <img src="images/final-car.png" alt="Red Formula 1 car" width="800px">
+    <img src="images/final-car.png" alt="Red Formula 1 car clipart" width="800px">
   </div>
   <div class="scroll-bounce">
     <p>SCROLL TO CONTINUE</p>
+  </div>
+  <div id="car-info">
+    <div id="infoAnnotations">
+      <img src="images/the-cars.png" alt="The Cars" width="300px">
+      <div id="car-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+    </div>
+    <div id="car-and-points">
+      <div class="car-popup" id="circle-1-div">
+        <text>F1 tires are supplied by tiremaker Pirelli. Teams are able to change tires multiple times per weekend, but can only choose from a predetermined selection of soft, medium, and hard compound tires. This selection also includes rain (wets) and other treaded tires (intermediates) in the case of poor weather.</text></div>
+      <span class="circle" id="circle-1"></span>
+      <div class="car-popup" id="circle-2-div"></div>
+      <span class="circle" id="circle-2"></span>
+      <div class="car-popup" id="circle-3-div"></div>
+      <span class="circle" id="circle-3"></span>
+      <div class="car-popup" id="circle-4-div"></div>
+      <span class="circle" id="circle-4"></span>
+      <div class="car-popup" id="circle-5-div"></div>
+      <span class="circle" id="circle-5"></span>
+      <!-- <span class="circle" id="circle-6"></span> -->
+       <!-- Image sourced from https://www.clipartmax.com/middle/m2K9A0m2G6m2Z5N4_free-vector-formula-one-car-clip-art-formula-1-clipart/ -->
+      <img src="images/final-car.png" alt="Red Formula 1 car clipart" width="800px">
+    </div>
   </div>
   
   <div id="map">
@@ -167,6 +189,51 @@
       .attr('transform', `translate(${scatterMargins.left},${0})`);
     let scatterHeightA = scatterHeight - scatterMargins.top - scatterMargins.bottom;
     let scatterWidthA = scatterWidth - scatterMargins.left - scatterMargins.right;
+
+    // The Car section
+    let circle1div = document.getElementById("circle-1-div");
+    let circle1 = d3.select("span#circle-1");
+    circle1.on("mouseover", function (e) {
+        circle1div.style.visibility = "visible";
+      })
+      .on("mouseout", function (e) {
+        circle1div.style.visibility = "hidden";
+      })
+    let circle2div = document.getElementById("circle-2-div");
+    let circle2 = d3.select("span#circle-2");
+    circle2.on("mouseover", function (e) {
+        circle2div.style.visibility = "visible";
+      })
+      .on("mouseout", function (e) {
+        circle2div.style.visibility = "hidden";
+      })
+    let circle3div = document.getElementById("circle-3-div");
+    let circle3 = d3.select("span#circle-3");
+    circle3.on("mouseover", function (e) {
+        circle3div.style.visibility = "visible";
+      })
+      .on("mouseout", function (e) {
+        circle3div.style.visibility = "hidden";
+      })
+    let circle4div = document.getElementById("circle-4-div");
+    let circle4 = d3.select("span#circle-4");
+    circle4.on("mouseover", function (e) {
+        circle4div.style.visibility = "visible";
+      })
+      .on("mouseout", function (e) {
+        circle4div.style.visibility = "hidden";
+      })
+    let circle5div = document.getElementById("circle-5-div");
+    let circle5 = d3.select("span#circle-5");
+    circle5.on("mouseover", function (e) {
+        circle5div.style.visibility = "visible";
+      })
+      .on("mouseout", function (e) {
+        circle5div.style.visibility = "hidden";
+      })
+
+
+    // End - the car section
 
     /*
       The data files setup (by Natasha) <3 (i figured id put this here so we can go back to it while we work if needed)
