placeholder text in car area

--- a/index.html
+++ b/index.html
@@ -28,19 +28,31 @@
   <div id="car-info">
     <div id="infoAnnotations">
       <img src="images/the-cars.png" alt="The Cars" width="300px">
-      <div id="car-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+      <div id="car-description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <br><br>
+        Mouse over the areas on the car to learn more about them.
+    </div>
     </div>
     <div id="car-and-points">
       <div class="car-popup" id="circle-1-div">
         <text>F1 tires are supplied by tiremaker Pirelli. Teams are able to change tires multiple times per weekend, but can only choose from a predetermined selection of soft, medium, and hard compound tires. This selection also includes rain (wets) and other treaded tires (intermediates) in the case of poor weather.</text></div>
       <span class="circle" id="circle-1"></span>
-      <div class="car-popup" id="circle-2-div"></div>
+      <div class="car-popup" id="circle-2-div">
+        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+      </div>
       <span class="circle" id="circle-2"></span>
-      <div class="car-popup" id="circle-3-div"></div>
+      <div class="car-popup" id="circle-3-div">
+        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+      </div>
       <span class="circle" id="circle-3"></span>
-      <div class="car-popup" id="circle-4-div"></div>
+      <div class="car-popup" id="circle-4-div">
+        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+      </div>
       <span class="circle" id="circle-4"></span>
-      <div class="car-popup" id="circle-5-div"></div>
+      <div class="car-popup" id="circle-5-div">
+        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+      </div>
       <span class="circle" id="circle-5"></span>
       <!-- <span class="circle" id="circle-6"></span> -->
        <!-- Image sourced from https://www.clipartmax.com/middle/m2K9A0m2G6m2Z5N4_free-vector-formula-one-car-clip-art-formula-1-clipart/ -->
