finishing up car graphic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img id="descr" src="images/description-1.png" alt="An introductory guide to the high-speed motorsport" width="300px">
     </div>  
     <!-- Image sourced from https://www.clipartmax.com/middle/m2K9A0m2G6m2Z5N4_free-vector-formula-one-car-clip-art-formula-1-clipart/ -->
-    <img src="images/final-car.png" alt="Red Formula 1 car clipart" width="800px">
+    <img src="images/final-car.png" alt="Red Formula 1 car clipart" width="700px">
   </div>
   <div class="scroll-bounce">
     <p>SCROLL TO CONTINUE</p>
@@ -29,29 +29,36 @@
     <div id="infoAnnotations">
       <img src="images/the-cars.png" alt="The Cars" width="300px">
       <div id="car-description">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        The F1 car is the driver's sole tool during a race. During an average race, a driver is seated in the vehicle for around 70 laps or 1.5 hours. Drivers, via controls on their steering wheel, can speak directly to their teams and engineers to get status updates, change the brake balance, shift gears, decrease to pit lane speed, and more.
         <br><br>
-        Mouse over the areas on the car to learn more about them.
+        With speeds up to around 220mph, there is a heavy amount of engineering that goes into managing airflow around the vehicle to keep it gliding over the ground. Each component of the car must be purposeful&#8212internal and external&#8212to achieve maximum speed and reliability.
+        <br><br>
+        <strong>Mouse over the areas on the car to learn more about them.</strong>
     </div>
     </div>
     <div id="car-and-points">
       <div class="car-popup" id="circle-1-div">
-        <text>F1 tires are supplied by tiremaker Pirelli. Teams are able to change tires multiple times per weekend, but can only choose from a predetermined selection of soft, medium, and hard compound tires. This selection also includes rain (wets) and other treaded tires (intermediates) in the case of poor weather.</text></div>
+        <p>Tires</p>
+        <p>F1 tires are supplied by Pirelli. Teams are able to change tires multiple times per weekend, but can only choose from a predetermined selection of soft, medium, and hard compound tires. This selection also includes rain (wets) and other treaded tires (intermediates) in the case of poor weather.</p></div>
       <span class="circle" id="circle-1"></span>
       <div class="car-popup" id="circle-2-div">
-        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+        <p>Front Wing</p>
+        <p>The car's front wing is the first line of defense in creating proper airflow around the vehicle, allowing it to go quicker. Because of their high speed, F1 cars are at high risk of flipping or spinning out, especially around corners. The front wing (in part) helps to produce downforce which keeps the car on the ground.</p>
       </div>
       <span class="circle" id="circle-2"></span>
       <div class="car-popup" id="circle-3-div">
-        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+        <p>Cockpit</p>
+        <p>Seats are individually molded to fit the body of each driver to give maximum comfort and flexibility to read the pedals and control the wheel. Drivers can be seated here for up to 2 hours straight during the race. The cockpit is typically surrounded by a rounded bar, called the halo, for safety purposes.</p>
       </div>
       <span class="circle" id="circle-3"></span>
       <div class="car-popup" id="circle-4-div">
-        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+        <p>Sidepod</p>
+        <p>The sidepod is another important portion of the car that can affect drag and help to manage proper aerodynamics. It holds various internal components of the car, such as the radiators, which are integral in cooling off the engine to maintain a driveable temperature.</p>
       </div>
       <span class="circle" id="circle-4"></span>
       <div class="car-popup" id="circle-5-div">
-        <text>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </text>
+        <p>Rear Wing</p>
+        <p>Similar to the front wing, this component plays another important role in creating downforce and managing airflow. It allows for air to go above and below to create additional downforce, or through a remotely openable flap to reduce drag during long straight portions of the circuits. </p>
       </div>
       <span class="circle" id="circle-5"></span>
       <!-- <span class="circle" id="circle-6"></span> -->
