--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   
   <div id="map">
     <div id="mapAnnotations">
-      <h1>A Guide to F1</h1>
+      <img src="images/the-tracks.png" alt="The Tracks" width="300px">
       <div id="mapText">What is F1? The fast paced motorsport, <strong>Formula 1</strong>, has been around since 1950.
         With historical top speeds of around 180 mph in 1950, and current top speeds at around 220 mph, the F1 car is
         not your average roadster. Cheetahs can run at up to 80 mph; the average car can likely hit 120. F1 cars are the
@@ -89,7 +89,6 @@
 
     <svg id="map" height="900" width="900"></svg>
   </div>
-  
   <div class="bar-chart-area" id="barChartArea">
     <div class="bar-desc">Who's been winning the <span id="circuitBlank">_____</span> race? <br>
       <br>
